--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <span>📊</span>
                 </button>
                 <button id="my-baker-toggle" class="glass-button" aria-label="Toggle My Baker" title="My Baker: OFF">
-                    <span class="my-baker-toggle-icon">🏠</span>
+                    <span class="my-baker-toggle-icon">🥐</span>
                 </button>
                 <button id="whale-toggle" class="glass-button" aria-label="Toggle Mini Whale feed" title="Mini Whale: OFF">
                     <span class="whale-toggle-icon">🐬</span>
@@ -206,7 +206,7 @@
     <!-- My Baker Section (hidden by default, toggled via header button) -->
     <section class="my-baker-section" id="my-baker-section">
         <div class="my-baker-section-inner">
-            <h2 class="my-baker-title">🏠 My Baker</h2>
+            <h2 class="my-baker-title">🥐 My Baker</h2>
             <div class="my-baker-controls">
                 <input type="text" id="my-baker-input" class="my-baker-input" placeholder="Enter your tz1... address" spellcheck="false" autocomplete="off" maxlength="36">
                 <button id="my-baker-save" class="glass-button my-baker-btn" aria-label="Save baker address" title="Save baker address">Save</button>
