--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
                 <button id="my-baker-toggle" class="glass-button" aria-label="Toggle My Baker" title="My Baker: OFF">
                     <span class="my-baker-toggle-icon">🥐</span>
                 </button>
+                <button id="calc-toggle" class="glass-button" aria-label="Toggle Rewards Calculator" title="Calculator: OFF">
+                    <span class="calc-toggle-icon">🧮</span>
+                </button>
                 <button id="whale-toggle" class="glass-button" aria-label="Toggle Mini Whale feed" title="Mini Whale: OFF">
                     <span class="whale-toggle-icon">🐬</span>
                 </button>
@@ -207,8 +210,9 @@
     <section class="my-baker-section" id="my-baker-section">
         <div class="my-baker-section-inner">
             <h2 class="my-baker-title">🥐 My Baker</h2>
+            <p class="my-baker-desc">Paste any Tezos address — baker or delegator — to see balance, rewards, and baker stats.</p>
             <div class="my-baker-controls">
-                <input type="text" id="my-baker-input" class="my-baker-input" placeholder="Enter your tz1... address" spellcheck="false" autocomplete="off" maxlength="36">
+                <input type="text" id="my-baker-input" class="my-baker-input" placeholder="tz1… / tz2… / tz3… / tz4… / KT1…" spellcheck="false" autocomplete="off" maxlength="36">
                 <button id="my-baker-save" class="glass-button my-baker-btn" aria-label="Save baker address" title="Save baker address">Save</button>
                 <button id="my-baker-clear" class="glass-button my-baker-btn" aria-label="Clear baker address" title="Clear baker address">Clear</button>
             </div>
