--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-    <link rel="stylesheet" href="styles.css?v=20260211f">
+    <link rel="stylesheet" href="styles.css?v=20260211g">
 
     <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
