Collect mode data

--- a/index.html
+++ b/index.html
@@ -862,14 +862,13 @@
                             <div class="stat-value" id="tx-volume-front">
                                 <span class="loading">...</span>
                             </div>
-                            <p class="stat-description">Last 24 hours</p>
+                            <div class="sparkline-container"><canvas id="tx-volume-sparkline" class="sparkline-chart"></canvas><span class="trend-arrow" id="tx-volume-trend"></span></div>
                         </div>
                         <div class="card-back" aria-hidden="true">
                             <h2 class="stat-label">Transactions</h2>
                             <div class="stat-value" id="tx-volume-back">
                                 <span class="loading">...</span>
                             </div>
-                            <p class="stat-description">Last 24 hours</p>
                         </div>
                     </div>
                 </div>
@@ -894,14 +893,13 @@
                             <div class="stat-value" id="contract-calls-front">
                                 <span class="loading">...</span>
                             </div>
-                            <p class="stat-description">Last 24 hours</p>
+                            <div class="sparkline-container"><canvas id="contract-calls-sparkline" class="sparkline-chart"></canvas><span class="trend-arrow" id="contract-calls-trend"></span></div>
                         </div>
                         <div class="card-back" aria-hidden="true">
                             <h2 class="stat-label">Contract Calls</h2>
                             <div class="stat-value" id="contract-calls-back">
                                 <span class="loading">...</span>
                             </div>
-                            <p class="stat-description">Last 24 hours</p>
                         </div>
                     </div>
                 </div>
@@ -926,14 +924,13 @@
                             <div class="stat-value" id="funded-accounts-front">
                                 <span class="loading">...</span>
                             </div>
-                            <p class="stat-description">With balance</p>
+                            <div class="sparkline-container"><canvas id="funded-accounts-sparkline" class="sparkline-chart"></canvas><span class="trend-arrow" id="funded-accounts-trend"></span></div>
                         </div>
                         <div class="card-back" aria-hidden="true">
                             <h2 class="stat-label">Funded Accounts</h2>
                             <div class="stat-value" id="funded-accounts-back">
                                 <span class="loading">...</span>
                             </div>
-                            <p class="stat-description">With balance</p>
                         </div>
                     </div>
                 </div>
@@ -972,14 +969,13 @@
                             <div class="stat-value" id="smart-contracts-front">
                                 <span class="loading">...</span>
                             </div>
-                            <p class="stat-description">Deployed</p>
+                            <div class="sparkline-container"><canvas id="smart-contracts-sparkline" class="sparkline-chart"></canvas><span class="trend-arrow" id="smart-contracts-trend"></span></div>
                         </div>
                         <div class="card-back" aria-hidden="true">
                             <h2 class="stat-label">Smart Contracts</h2>
                             <div class="stat-value" id="smart-contracts-back">
                                 <span class="loading">...</span>
                             </div>
-                            <p class="stat-description">Deployed</p>
                         </div>
                     </div>
                 </div>
@@ -1004,14 +1000,13 @@
                             <div class="stat-value" id="tokens-front">
                                 <span class="loading">...</span>
                             </div>
-                            <p class="stat-description">FA1.2 & FA2</p>
+                            <div class="sparkline-container"><canvas id="tokens-sparkline" class="sparkline-chart"></canvas><span class="trend-arrow" id="tokens-trend"></span></div>
                         </div>
                         <div class="card-back" aria-hidden="true">
                             <h2 class="stat-label">Tokens</h2>
                             <div class="stat-value" id="tokens-back">
                                 <span class="loading">...</span>
                             </div>
-                            <p class="stat-description">FA1.2 & FA2</p>
                         </div>
                     </div>
                 </div>
@@ -1036,14 +1031,13 @@
                             <div class="stat-value" id="rollups-front">
                                 <span class="loading">...</span>
                             </div>
-                            <p class="stat-description">L2 solutions</p>
+                            <div class="sparkline-container"><canvas id="rollups-sparkline" class="sparkline-chart"></canvas><span class="trend-arrow" id="rollups-trend"></span></div>
                         </div>
                         <div class="card-back" aria-hidden="true">
                             <h2 class="stat-label">Smart Rollups</h2>
                             <div class="stat-value" id="rollups-back">
                                 <span class="loading">...</span>
                             </div>
-                            <p class="stat-description">L2 solutions</p>
                         </div>
                     </div>
                 </div>
