Price ticker to top

--- a/index.html
+++ b/index.html
@@ -76,6 +76,23 @@
     </script>
 </head>
 <body data-theme="matrix">
+    <!-- XTZ Price Bar -->
+    <div id="price-bar" class="price-bar">
+        <div class="price-bar-content">
+            <a href="https://www.coingecko.com/en/coins/tezos" target="_blank" rel="noopener" class="price-link">
+                <span class="price-label">XTZ</span>
+                <span class="price-value">—</span>
+            </a>
+            <span class="price-change">—</span>
+            <span class="price-separator">·</span>
+            <span class="price-alt" id="price-eur">—</span>
+            <span class="price-separator">·</span>
+            <span class="price-alt" id="price-btc">—</span>
+            <span class="price-separator">·</span>
+            <span class="price-mcap">—</span>
+        </div>
+    </div>
+
     <!-- Header with controls -->
     <header class="header">
         <div class="header-content">
@@ -152,18 +169,6 @@
             </div>
         </div>
     </header>
-
-    <!-- XTZ Price Bar -->
-    <div id="price-bar" class="price-bar">
-        <div class="price-bar-content">
-            <a href="https://www.coingecko.com/en/coins/tezos" target="_blank" rel="noopener" class="price-link">
-                <span class="price-label">XTZ</span>
-                <span class="price-value">—</span>
-            </a>
-            <span class="price-change">—</span>
-            <span class="price-mcap">—</span>
-        </div>
-    </div>
 
     <!-- Upgrade Clock -->
     <section class="upgrade-clock" id="upgrade-clock">
