--- a/index.html
+++ b/index.html
@@ -1273,7 +1273,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@3.0.0/dist/chartjs-adapter-date-fns.bundle.min.js"></script>
 
     <!-- Load app as module -->
-    <script type="module" src="app.js?v=20260211e"></script>
+    <script type="module" src="app.js?v=20260211f"></script>
     <!-- My Baker Info Modal -->
     <div class="modal-overlay" id="my-baker-modal" aria-hidden="true">
         <div class="modal-content">
@@ -1414,6 +1414,7 @@
 
     <script type="module" src="history.js"></script>
     <script type="module" src="matrix-effects.js"></script>
+    <script type="module" src="bg-effects.js"></script>
     <script type="module" src="gauge.js?v=3"></script>
     <script type="module" src="price.js"></script>
     <script type="module" src="comparison.js"></script>
